Marisa Adelino - GUI changes.