@@ -1,25 +1,21 @@
 package pt.ipp.isep.dei.esoft.project.ui.gui;
 
 import javafx.fxml.FXML;
-import javafx.fxml.FXMLLoader;
 import javafx.geometry.Insets;
-import javafx.scene.Parent;
-import javafx.scene.Scene;
-import javafx.scene.control.*;
-import javafx.scene.image.ImageView;
+import javafx.scene.control.Alert;
+import javafx.scene.control.Button;
+import javafx.scene.control.PasswordField;
+import javafx.scene.control.TextField;
 import javafx.scene.layout.VBox;
 import javafx.stage.Stage;
-import javafx.scene.control.TextField;
-
 import pt.ipp.isep.dei.esoft.project.application.controller.authorization.AuthenticationController;
 import pt.isep.lei.esoft.auth.mappers.dto.UserRoleDTO;
 
-import java.io.IOException;
 import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
 
-public class MainMenuGUI{
+import static pt.ipp.isep.dei.esoft.project.ui.gui.UtilsGUI.loadUI;
+
+public class MainMenuGUI {
 
     @FXML
     private VBox mainBox;
@@ -53,7 +49,8 @@ public class MainMenuGUI{
 
         boolean loginSuccessful = ctrl.doLogin(id, password);
         if (loginSuccessful) {
-            Alert alert = new Alert(Alert.AlertType.INFORMATION);
+            new Alert(Alert.AlertType.INFORMATION);
+            Alert alert;
             List<UserRoleDTO> roles = ctrl.getUserRoles();
             if ((roles == null) || (roles.isEmpty())) {
                 alert = new Alert(Alert.AlertType.ERROR);
@@ -62,12 +59,12 @@ public class MainMenuGUI{
                 alert.setContentText("No role assigned to user.");
                 alert.showAndWait();
             } else {
-                UserRoleDTO role = roles.get(0); // Get the single role directly
+                UserRoleDTO role = roles.getFirst(); // Get the single role directly
+                Stage stage = (Stage) btnDevTeam.getScene().getWindow();
                 switch (role.getDescription()) {
                     case AuthenticationController.ROLE_HRM:
                         loadHrmMenu();
 
-                        Stage stage = (Stage) btnDevTeam.getScene().getWindow();
                         stage.close();
                         break;
                     case AuthenticationController.ROLE_VFM:
@@ -117,18 +114,24 @@ public class MainMenuGUI{
      * Loads the HRM menu.
      */
     private void loadHrmMenu() {
+        Stage stage = (Stage) btnDevTeam.getScene().getWindow();
         loadUI("/HrmGUI.fxml");
+        stage.close();
     }
 
     private void loadAdminMenu() {
+        Stage stage = (Stage) btnDevTeam.getScene().getWindow();
         loadUI("/AdminGUI.fxml");
+        stage.close();
     }
 
     /**
      * Loads the VFM menu.
      */
     private void loadVfmMenu() {
+        Stage stage = (Stage) btnDevTeam.getScene().getWindow();
         loadUI("/VfmGUI.fxml");
+        stage.close();
     }
 
     /**
@@ -136,44 +139,25 @@ public class MainMenuGUI{
      */
     @FXML
     public void handleDevTeam() {
+        Stage stage = (Stage) btnDevTeam.getScene().getWindow();
         loadUI("/DevTeamGUI.fxml");
+        stage.close();
     }
 
     /**
      * Loads the GSM menu.
      */
     private void loadGsmMenu() {
+        Stage stage = (Stage) btnDevTeam.getScene().getWindow();
         loadUI("/GsmGUI.fxml");
-    }
-
-    /**
-     * Handles the Register button action.
-     */
-    @FXML
-    public void handleRegister() {
-        loadUI("/RegisterMenuGUI.fxml");
+        stage.close();
     }
 
     @FXML
     public void handleCollaboratorMenu() {
+        Stage stage = (Stage) btnDevTeam.getScene().getWindow();
         loadUI("/CollaboratorMenuGUI.fxml");
+        stage.close();
     }
 
-    /**
-     * Loads the UI from a FXML file.
-     *
-     * @param fxmlPath the FXML file path
-     */
-    private void loadUI(String fxmlPath) {
-        try {
-            FXMLLoader loader = new FXMLLoader(getClass().getResource(fxmlPath));
-            Parent root = loader.load();
-
-            Stage stage = new Stage();
-            stage.setScene(new Scene(root, 600, 600));
-            stage.show();
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-    }
 }
